// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component matches snapshot with custom props 1`] = `
<Button
  block={false}
  ghost={false}
  htmlType="submit"
  loading={true}
  onClick={[MockFunction]}
  type="dashed"
>
  Custom button
</Button>
`;

exports[`Button component matches snapshot without props 1`] = `
<Button
  block={false}
  ghost={false}
  htmlType="button"
  loading={false}
  type="primary"
>
  Button
</Button>
`;
